update index to stage for references

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                   <div class="mx-auto col-lg-5 col-md-5 col-10">
                         <br>
-                      <img src="assets/images/Pic.png" class="img-fluid" alt="Ben Resume HTML Template">
+                      <!--<img src="assets/images/Pic.png" class="img-fluid" alt="Ben Resume HTML Template">-->
                       <ul class="social-links mt-2 section-padding">
                         <li><a href="https://www.instagram.com/samapplebees/" rel="noopener" class="fab fa-instagram fa-4x"></a></li>
                         <li><a href="https://www.linkedin.com/in/spalby/" rel="noopener" class="fab fa-linkedin fa-4x"></a></li>
@@ -99,7 +99,7 @@
                 <div class="col-lg-6 col-md-6 col-12">
                     <h3 class="mb-4">About me!</h3>
 
-                    <p>Hi! I'm Samuel Albanese, a student currently enrolled at St marys Colege of Maryland. I plan on getting a bachaelors degree in Mathematics with a minor in Business administration. Some of my interest outside of Mathematics include Ping Pong, coding, Web design and climbing which you can see me doing pictured on the right!</p>
+                    <p>Hi! I'm Samuel Albanese, a 4/4 Computer Science student currently enrolled at St Mary's College of Maryland.</p>
 
                     <ul class="mt-4 mb-5 mb-lg-0 profile-list list-unstyled">
                         <li><strong>Full Name :</strong>Samuel Albanese </li>
@@ -110,10 +110,14 @@
                     </ul>
                 </div>
                 <div class="col-lg-6 col-md-6 col-12">
-                        <img src="assets/images/Pic.png"></img>
+                        <!--<img src="assets/images/Pic.png"></img>-->
+                        <a href="stagdemo/index.html" class="email-link" style="background-color: cadetblue; font-size: 28px;">
+                              Check out this cool RPG demo!
+                          </a>
                 </div>
 
             </div>
+      <!--
             <div class="row about-third">
             	<div class="col-lg-4 col-md-4 col-12">
                 <h3>Mathematics Education</h3>
@@ -133,11 +137,13 @@
                   </p>
                   </div>
             </div>
+      -->
         </div>
     </section>
 
 
     <!-- TESTIMONIAL -->
+<!--
      <section class="testimonials section-padding" id="testimonials">
           <div class="container">
                <div class="row">
@@ -204,6 +210,7 @@
                </div>
           </div>
      </section>
+-->
 
      <!-- SCRIPTS -->
      <script src="assets/js/jquery.min.js"></script>
