--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>Samuel Albaneses Professional Page</title>
+     <title>Samuel Albanese</title>
 
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -143,7 +143,7 @@
 
 
     <!-- TESTIMONIAL -->
-<!--
+
      <section class="testimonials section-padding" id="testimonials">
           <div class="container">
                <div class="row">
@@ -210,7 +210,7 @@
                </div>
           </div>
      </section>
--->
+
 
      <!-- SCRIPTS -->
      <script src="assets/js/jquery.min.js"></script>
