--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 
                   <div class="mx-auto col-lg-5 col-md-5 col-10">
                         <br>
-                      <!--<img src="assets/images/Pic.png" class="img-fluid" alt="Ben Resume HTML Template">-->
-                      <ul class="social-links mt-2 section-padding">
+                      <img src="assets/images/pic.jpg" class="img-fluid" alt="Samuel Albanese headshot">
+                      <ul class="social-links mt-2 section-padding" style="padding-left:90px">
                         <li><a href="https://www.instagram.com/samapplebees/" rel="noopener" class="fab fa-instagram fa-4x"></a></li>
                         <li><a href="https://www.linkedin.com/in/spalby/" rel="noopener" class="fab fa-linkedin fa-4x"></a></li>
-                        <li><a href="https://github.com/samalby" rel="noopener" class="fab fa-github fa-4x"></a></li>
+                        <li><a href="https://github.com/samalby" rel="noopener" class="fab fa-github"></a></li>
                       </ul>
                   </div>
 
@@ -99,7 +99,7 @@
                 <div class="col-lg-6 col-md-6 col-12">
                     <h3 class="mb-4">About me!</h3>
 
-                    <p>Hi! I'm Samuel Albanese, a 4/4 Computer Science student currently enrolled at St Mary's College of Maryland.</p>
+                    <p>Hi! I'm Samuel Albanese, a 4/4 Computer Science student currently enrolled at St Mary's College of Maryland.<br><br> Software is my passion, and I am eager to apply my experience and utilize this passion to impress your customers.</p>
 
                     <ul class="mt-4 mb-5 mb-lg-0 profile-list list-unstyled">
                         <li><strong>Full Name :</strong>Samuel Albanese </li>
@@ -110,10 +110,20 @@
                     </ul>
                 </div>
                 <div class="col-lg-6 col-md-6 col-12">
+                    <h3 class="mb-4">Notable Projects:</h3>
                         <!--<img src="assets/images/Pic.png"></img>-->
                         <a href="stagdemo/index.html" class="email-link" style="background-color: cadetblue; font-size: 28px;">
-                              Check out this cool RPG demo!
+                              Stag Lands (AP Test 2018)
                           </a>
+                          <a href="tlor/index.html" class="email-link" style="background-color: cadetblue; font-size: 28px;">
+                            The Life of Ren (2023)
+                        </a>
+                        <a href="https://github.com/SamAlby/PizzaPOS" class="email-link" style="background-color: cadetblue; font-size: 28px;">
+                            Pizza Point-of-Sale (2023)
+                        </a>
+                        <a href="https://github.com/SamAlby/ChesapeakeCommunityConnect" class="email-link" style="background-color: cadetblue; font-size: 28px;">
+                            Chesapeake Community Connect (2023-24)
+                        </a>
                 </div>
 
             </div>
@@ -186,6 +196,7 @@
                                 </div>
                             </div>
 
+                        <!--
                             <div class="item">
                                 <div class="testimonials-thumb d-flex">
                                     <div class="testimonials-image">
@@ -202,6 +213,7 @@
                                     </div>
                                 </div>
                             </div>
+                        -->
 
                         </div>
 
